Fix text alignment of model names in object permissions section

--- a/client/scss/components/_listing.scss
+++ b/client/scss/components/_listing.scss
@@ -27,6 +27,7 @@ ul.listing {
 
   td,
   th {
+    text-align: start;
     padding: calc(1em * var(--w-density-factor)) 0.3em;
 
     @include media-breakpoint-up(sm) {
@@ -62,7 +63,6 @@ ul.listing {
 
     th {
       font-size: 0.9em;
-      text-align: start;
       font-weight: normal;
       white-space: nowrap;
     }
@@ -87,8 +87,8 @@ ul.listing {
   }
 
   &:has(
-      td:first-child input[type='checkbox'],
-      th:first-child input[type='checkbox']
+      td:first-child input[type='checkbox']:only-child,
+      th:first-child input[type='checkbox']:only-child
     ) {
     td:first-child,
     th:first-child {
@@ -97,6 +97,7 @@ ul.listing {
       width: theme('spacing.10');
       text-align: center;
 
+      // stylelint-disable-next-line selector-max-specificity
       input[type='checkbox'] {
         margin-inline-end: 0;
       }
@@ -574,8 +575,8 @@ table.listing {
     }
 
     &:has(
-        td:first-child input[type='checkbox'],
-        th:first-child input[type='checkbox']
+        td:first-child input[type='checkbox']:only-child,
+        th:first-child input[type='checkbox']:only-child
       ) {
       // Bulk actions, match the width of the header spacing up until
       // the page title (final breadcrumb item):
@@ -596,8 +597,8 @@ table.listing {
     // custom ordering is active, as the padding to match the breadcrumbs is
     // already handled by the first column.
     &:has(
-        td:first-child input[type='checkbox'],
-        th:first-child input[type='checkbox'],
+        td:first-child input[type='checkbox']:only-child,
+        th:first-child input[type='checkbox']:only-child,
         .ord
       ) {
       th:nth-child(2),
@@ -616,11 +617,12 @@ table.listing {
     // then apply the same 80px padding via the first column's left padding.
     &:not(.nice-padding &, .report &, .editor-view &):not(
         :has(
-            td:first-child input[type='checkbox'],
-            th:first-child input[type='checkbox'],
+            td:first-child input[type='checkbox']:only-child,
+            th:first-child input[type='checkbox']:only-child,
             .ord
           )
       ) {
+      // stylelint-disable-next-line selector-max-specificity
       th:first-child,
       td:first-child {
         padding-inline-start: theme('spacing.20');
